# blockchain-from-scratch

./: Cargo.toml  LICENSE  README.md  build.rs
proto/: rpc.proto
src/: lib.rs  main.rs  server.rs
src/block/: block.rs  body.rs  header.rs  mod.rs
src/common/: db.rs  error.rs  hashable.rs
src/crypto/: hasher.rs  merkle.rs  mod.rs  wallet.rs
src/merkle/: merkle_tree.rs
src/transaction/: mod.rs  pool.rs  stake_transaction.rs  transaction.rs
