[package]
name = "blockchain_from_scratch"
version = "0.1.0"
edition = "2021"
authors = ["Faisal Al-Tameemi <faisal@mindsetlabs.io>"]
description = "A (basic) blockchain from scratch in Rust"

[dependencies]
sha2 = { version = "0.10.8" }
serde = { version = "1.0", features = ["derive"] }
bip39 = { version = "2.1.0", features = ["rand"] }
hex = "0.4.3"
thiserror = "2.0.9"
clap = "4.5.23"
